--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <nav>
 <a href="Accueil.html">Accueil</a>
 <a href="apropos.html">Á propos</a>
-<a href="compétences.html">Compétences</a>
+<a href="Compétences.html">Compétences</a>
 <a href="Projet.html">Projet</a>
 <a href="contacts.html">Contacts</a>
 <a href="Mon CV.html">Mon CV</a>
 </nav>
 <header>
 <h1 style="background-color: blue; font-size: 34px;">Bienvenue sur le portail de mon portfolio</h1>
-<img src="c:\Program Files (x86)\Algodoo\html\welcome\computer_object.png" alt="computer_oject.png"><br>
+<img src="c:\Program Files (x86)\Algodoo\html\welcome\computer_object.png" alt=":\Program Files (x86)\Algodoo\html\welcome\computer_object.png"><br>
 <img src="c:\Program Files (x86)\Algodoo\html\welcome\welcome.html" alt="welcom.HTML.CSS.JavaScript">
 </body>
 </html>
