--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <a href="Mon CV.html">Mon CV</a>
 </nav>
 <header>
-<h1 style="background-color: blue; font-size: 34px;">Bienvenue sur le portail de mon portfolio</h1>
-<img src="c:\Program Files (x86)\Algodoo\html\welcome\computer_object.png" alt=":\Program Files (x86)\Algodoo\html\welcome\computer_object.png"><br>
-<img src="c:\Program Files (x86)\Algodoo\html\welcome\welcome.html" alt="welcom.HTML.CSS.JavaScript">
+<h1 style="background-color: blue; font-size: 28px;">Bienvenue sur le portail de mon portfolio</h1>
+<img src="welcomehtml" alt="welcom.HTML.CSS.JavaScript">
 </body>
 </html>
