--- a/Accueil.html
+++ b/Accueil.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Untitled-1.css">
 </head>
 <body>
-    <h2 style="background-color: blue; font-size: 36px;">Salut à toi visiteur curieux!</h2>
-    <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">Tu viens de poser un pied dans mon monde numérique.Passion,code, innovation
+    <div class="contenu">
+<h2 style="background-color: white; font-size: 25px;">Salut à toi visiteur curieux!</h2>
+    <p style="margin: 10px; padding: 10px; line-height: 1,05; font-weight: normal;text-align: justify;">Tu viens de poser un pied dans mon monde numérique.Passion,code, innovation
        c'est ce qui m'anime! <br>
        Explore,clique,découvre! </p>
-       <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">Je suis passionné de développement web ce site te montre ce que j'apprends et crée</p>
-       <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">Tu trouveras mes projets, competences et réalisations. Merci de votre visite et 
+       <p style="margin: 10px; padding: 10px; line-height: 1,05; font-weight: normal;text-align: justify;">Je suis passionné de développement web ce site te montre ce que j'apprends et crée</p>
+       <p style="margin: 10px; padding: 20px; line-height: 1,05; font-weight: normal;text-align: justify;">Tu trouveras mes projets, competences et réalisations. Merci de votre visite et 
         bonne exploration.
        </p>
+       
+    </div>
+    <footer>
+    ® DCLIC 2025 Mon premier site web
+</footer>
 </body>
 </html> 
