--- a/Compétences.html
+++ b/Compétences.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compétences</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Untitled-1.css">
 </head>
 <body>
-    <h2 style="background-color: blue; font-size: 36px;">Mes compétences en développement web</h2>
-    <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">
+    <div class="contenu">
+        <h2 style="background-color: white; font-size: 20px;">Mes compétences en développement web</h2>
+    <p style="margin: 10px; padding: 10px; line-height: 1,25; font-weight: normal;text-align: justify;">
     Après cinq(5) semaines de formation au sein de l'Organisation Internationale de la Francophonie <br>
     pour le développement web niveau débutant, mes compétences se subdivisent en deux parties à savoir: <br>
-   <h3 style="background-color: blue; font-size: 30px;" > Compétences techniques:</h3> <br>
+   <h3 style="background-color: white; font-size: 20px;" > Compétences techniques:</h3> <br>
     <li>Connaissances des langages HTML et CSS pour la création des pages web;</li> <br>
     <li>Initiation à JavaScript pour l'interactivité de base;</li> <br>
     <li>Maitrise   des structures de base (balises, sélecteurs, formulaires, listes ,tableaux etc..;)</li> <br>
     <li>Utilisation d'un editeur de text  comme Visual Studio Code;</li> <br>
     <li>Capacité à structurer un site web. </li> <br>
-    <h3 style="background-color: blue; font-size: 30px;">Compétences transversales:</h3> <br>
+    <h3 style="background-color: white; font-size: 20px;">Compétences transversales:</h3> <br>
     <li>Esprit logique et la capacité à resoudre des problemes simples;</li><br>
     <li>Motivation à apprendre et à progresser dans le domaine du web.</li>
-   
-   
 
     </p>
+    </div>
+    
+     <footer> ® DCLIC 2025 Mon premier site web</footer> 
 </body>
 </html>
