--- a/Mon CV.html
+++ b/Mon CV.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcours</title>
-    <link rel="stylesheet" href="parcours.css">
+    <link rel="stylesheet" href="Untitled-1.css">
+    <link rel="stylesheet" href="MonImage.css">
 </head>
 <body>
-    <h1 style="background-color: darkorange;">CAMARA ALPHA AMADOU</h1>
+    <img src="c:\Users\ALPHA AMADOU CAMARA\Desktop\Portfolio\IMG_20210703_230709_7.jpg" alt="IMG_20210703_230709_7.jpg" class="image-angle">
+    <div class="contenu">
+       <h1 style="background-color: darkorange;">CAMARA ALPHA AMADOU</h1>
    
     Veuillez télécharger mon CV <a href="CV.html">Clic ici</a>
     
-     <h2 style="color: blue; font-size: 16px;font-family: Arial; text-decoration: underline;
+     <h2 style="background-color: white; font-size: 20px;font-family: Arial; text-align: justify;
        ">EXPERIENCES PROFESSIONNELLES</h2>
-    <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">
+    <p style="margin: 10px; padding: 20px; line-height: 1,25; font-weight: normal;text-align: justify;">
     <li>Aout-Septembre 2024 Formation en ligne sur égalité femmes-hommes dans l'éducation <br>
         organisée par l'Organisation Internationale de la Francophonie (OIF).</li>
         
@@ -36,9 +39,9 @@
         14 mai 2018 élu Président de l'ONG AJAG (Association des Jeunes Actifs de Guinée)
          </li>
     </p>
-    <h2 style="color: blue; font-size: 16px; font-family: Arial, Helvetica, sans-serif; text-decoration: underline; 
+    <h2 style="background-color: white; font-size: 20px; font-family: Arial,  sans-serif; text-align: justify; 
      ">FORMATIONS ACADEMIQUES</h2>
-     <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;" >
+     <p style="margin: 10px; padding: 10px; line-height: 1,25; font-weight: normal;text-align: justify;" >
         <li>
        2023-2025 en formation à l'Ecole Normale Supérieure (ENS) de l'Université Abdou Moumouni de Niamey <br>
        Option:PHYSIQUE-CHIMIE <br>
@@ -55,7 +58,7 @@
         Diplome optenu: BACALAUREAT UNIQUE
         </li>
 
-         <h3 style="background-color: blue; font-size: 30px;"> Compétences informatiques</h3> <br>
+         <h3 style="background-color:white;  font-size: 20px;"> Compétences informatiques</h3> <br>
        <li>Word</li>  
     <li>PowerPoint</li>
     <li>Excel</li>
@@ -70,20 +73,22 @@
     <li>SPSS</li>
     <li>Géogebra</li>
 
-<h3 style="background-color: blue; font-size: 30px;"> Ma personnalité</h3> <br>
+<h3 style="background-color: white; font-size: 20px;"> Ma personnalité</h3> <br>
        <li>Leader</li>  
     <li>organisé</li>
     <li>Ponctuel</li>
     <li>Créatif</li>
     <li>Manager</li>
 
-<h3 style="background-color: blue; font-size: 30px;"> Langues parlées</h3> <br>
+<h3 style="background-color: white; font-size: 30px;"> Compétences lingustiques</h3> <br>
 <li>Poular</li>  
     <li>Sousou</li>
     <li>Malinké</li>
     <li>Français</li>
     <li>Anglais</li>
 
-     </p>
+     </p> 
+    </div>
+     <footer> ® DCLIC 2025 Mon premier site web</footer> 
 </body>
 </html>
