--- a/Projet.html
+++ b/Projet.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon projet</title>
     <link rel="stylesheet" href="Projet.css">
+    <link rel="stylesheet" href="Untitled-1.css">
 </head>
 <body>
-    <div class="container">
+    <div class="contenu">
         <h1 style="color: crimson; font-size: 26px;">Mon projet</h1>
-        <p style="color: blue; font-size: 14px; font-family: 'Times New Roman;">Création d'une 
+        <p style=color:darkred font-size: 14px; font-family: 'Times New Roman;">Création d'une 
         application web qui permet d'ajouter, afficher et supprimer des tàches</p>
         <input type="text" id="taskInput" placeholder="Ajouter une tache">
         
@@ -18,5 +19,6 @@
 
     </div>
     <script src="Projet.js"></script>
+    ® DCLIC 2025 Mon premier site web
 </body>
 </html>
