--- a/apropos.html
+++ b/apropos.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Á propos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Untitled-1.css">
 </head>
 <body>
-  <h2 style="background-color: blue; font-size: 36px;">Á propos du developpement web </h2> 
-  <p style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">Ma passion pour le développement web est née de ma curiosité pour le fonctionnement 
+  <div class="contenu">
+    <h2 style="background-color: white; font-size: 20px;">Á propos du developpement web </h2> 
+  <p style="margin: 10px; padding: 10px; line-height: ,1,25; font-weight: normal;text-align: justify;">Ma passion pour le développement web est née de ma curiosité pour le fonctionnement 
     des sites internet que j'utilisais au quotidien. </p> 
-    <P style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">Trés vite, j'ai été fasciné par la manière dont le code peut transformer  
+    <P style="margin: 8px; padding: 10px; line-height: 1,25; font-weight: normal;text-align: justify;">Trés vite, j'ai été fasciné par la manière dont le code peut transformer  
       une idée en une interface dynamique et interactive en combinant HTML,CSS et JavaScript.
       Ce domaine me permet d'allier créativité et logique, tout en résolvant des problèmes concrets.  </P>
-     <P style="margin: 10px; padding: 20px; line-height: 1,5; font-weight: normal;text-align: justify;">J'aime particulièrement voir l'impact  immédiat de mon travail à l'écran et la possibilité d'ameliorer 
+     <P style="margin: 8px; padding: 10px; line-height: 1,5; font-weight: normal;text-align: justify;">J'aime particulièrement voir l'impact  immédiat de mon travail à l'écran et la possibilité d'ameliorer 
       continuellement les experiences d'utisations.Le web évolue rapidement, et cette évolution constante 
       nourrit ma motivation à apprendre chaque jour de nouvelles technologies, langages ou outils.</P>
+    
+  </div>
+  <footer> ® DCLIC 2025 Mon premier site web</footer> 
 </body>
 </html>
