--- a/index.html
+++ b/index.html
@@ -7,16 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <nav>
 <a href="Accueil.html">Accueil</a>
 <a href="apropos.html">Á propos</a>
 <a href="Compétences.html">Compétences</a>
 <a href="Projet.html">Projet</a>
-<a href="contacts.html">Contacts</a>
+<a href="contact.html">contact</a>
 <a href="Mon CV.html">Mon CV</a>
 </nav>
 <header>
-<h1 style="background-color: blue; font-size: 28px;">Bienvenue sur le portail de mon portfolio</h1>
-<img src="welcomehtml" alt="welcom.HTML.CSS.JavaScript">
+    <div class="contenu">
+
+    <h1 style="background-color: blue; font-size: 26px;">Bienvenue sur le portail de mon portfolio</h1>
+<img src="c:\Users\ALPHA AMADOU CAMARA\Desktop\Portfolio\Image.jpg" alt="Image.jpg">
+  </div> 
+
+<footer>
+    ® DCLIC 2025 Mon premier site web
+</footer>
 </body>
 </html>
