--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="contenu">
 
     <h1 style="background-color: blue; font-size: 26px;">Bienvenue sur le portail de mon portfolio</h1>
-<img src="c:\Users\ALPHA AMADOU CAMARA\Desktop\Portfolio\Image.jpg" alt="Image.jpg">
+<img src="image.jpg" alt="image">
   </div> 
 
 <footer>
