--- a/Mon CV.html
+++ b/Mon CV.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="MonImage.css">
 </head>
 <body>
-    <img src="image2.jpg" alt="image2.jpg" class="image-angle">
+    <img src="image2.jpg" alt="image2.jpg" class="image2-angle">
     <div class="contenu">
        <h1 style="background-color: darkorange;">CAMARA ALPHA AMADOU</h1>
    
